<resources>
    <string name="base_url">https://amzreviewserver.herokuapp.com</string>
    <string name="app_name">Amazon Reviewer</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="save">Save</string>
    <string name="deleting_your_account_is_irreversible">Deleting your account is irreversible</string>
    <string name="delete">Delete</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="change_password">Change Password</string>
    <string name="name">Name</string>
    <string name="account_settings">Account settings</string>
    <string name="new_password">New password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="ordered">Ordered</string>
    <string name="delivered">Delivered</string>
    <string name="review_sent">Review sent</string>
    <string name="review_got">Review got</string>
    <string name="paid">Paid</string>
    <string name="sold">Sold</string>
    <string name="price_formatted">$%1$s</string>
</resources>